# verbs_rust_examples

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pre_merge.yaml
contracts/: MockAggregator.sol
contracts/aave/: ACLManager.json  AToken.json  AaveOracle.json  BorrowLogic.abi  BorrowLogic.json  BridgeLogic.abi  BridgeLogic.json  ConfiguratorLogic.abi  ConfiguratorLogic.json  DelegationAwareAToken.json  EModeLogic.abi  EModeLogic.json  EmissionManager.abi  EmissionManager.json  Faucet.abi  Faucet.json  FlashLoanLogic.abi  FlashLoanLogic.json  IncentivesProxy.json  IncentivesV2-Implementation.abi  IncentivesV2-Implementation.json  LiquidationLogic.abi  LiquidationLogic.json  MintableERC20.json  MockFlashLoanReceiver.abi  MockFlashLoanReceiver.json  Pool-Implementation.json  PoolAddressesProvider.json  PoolAddressesProviderRegistry.json  PoolConfigurator-Implementation.json  PoolDataProvider.json  PoolLogic.abi  PoolLogic.json  PullRewardsTransferStrategy.abi  PullRewardsTransferStrategy.json  ReserveStrategy-rateStrategyStableOne.json  ReserveStrategy-rateStrategyStableTwo.json  ReserveStrategy-rateStrategyVolatileOne.json  ReservesSetupHelper.abi  ReservesSetupHelper.json  (+22 more)
contracts/uniswap/: NonfungibleTokenPositionDescriptor.abi  Quoter.json  UniswapV3Factory.json  UniswapV3Pool.json  UniswapV3PoolDeployer.json
src/: main.rs
src/aave/: calls.rs  deployment.rs  fork_initialisation.rs  initialisation.rs  mod.rs  types.rs
src/aave/agents/: borrow_agent.rs  liquidation_agent.rs  mod.rs  uniswap_agent.rs  uniswap_noise_agent.rs
src/aave/protocol/: mod.rs  (+9 more)
