[package]
name = "verbs-rust-examples"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
verbs-rs = "0.3.1"

alloy-primitives = "0.6.4"
alloy-sol-types = { version="0.6.4", features=["json"]}

rand = "0.8.5"
rand_distr = "0.4.3"

funty = "2.0.0"
clap = { version = "4.5.1", features = ["derive"] }
